--- a/index.css
+++ b/index.css
@@ -1,6 +1,17 @@
- 
-    body, html { margin: 0; padding: 0; height: 60%; background-color: #1a1110; }
-    #root { height: 100%; }
+  #root {
+  height: calc(100dvh - 130px);
+  overflow: hidden;
+}
+
+   html, body {
+  margin: 0;
+  padding: 0;
+   height: 100dvh;
+  background-color: #1a1110;
+  overflow-x: hidden;
+}
+
+    
     .backface-hidden { backface-visibility: hidden; -webkit-backface-visibility: hidden; }
     .rotate-y-180 { transform: rotateY(180deg); }
     .-rotate-y-180 { transform: rotateY(-180deg); }
@@ -24,7 +35,7 @@
 .top-bar {
   width: 100%;
   height: 55px;
-  background: linear-gradient(to bottom, #000, #1a1a1a);
+  background: linear-gradient(to bottom, #000, #000000);
   display: flex;
   align-items: center;
   padding: 0 20px;
@@ -83,4 +94,9 @@
 .logo {
   height: 32px;
   width: auto;
+}
+
+html, body {
+  overscroll-behavior: none;
+  touch-action: pan-x pan-y;
 }
