--- a/index.css
+++ b/index.css
@@ -1,4 +1,4 @@
-  #root {
+    #root {
   height: calc(100dvh - 130px);
   overflow: hidden;
 }
@@ -100,3 +100,11 @@ html, body {
   overscroll-behavior: none;
   touch-action: pan-x pan-y;
 }
+
+
+
+
+
+
+
+  </style>
